# cube

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main.cxx  readme.md  run
include/: buffer_setter.h  image_loader.h  matrices.h  projection_matrix.h  quad.h  shader_compiler.h  window_initializer.h
shaders/: frag.glsl  vert.glsl
src/: buffer_setter.cxx  image_loader.cxx  main.cxx  matrices.cxx  projection_matrix.cxx  quad.cxx  shader_compiler.cxx  window_initializer.cxx
